<resources>
    <string name="app_name">快易付</string>
    <string name="confirm">确定</string>
    <string name="choose_start_time">选择时间</string>
    <string name="next_step">下一步</string>
    <string name="confrim_pay">快易付</string>
    <string name="download_add">www.ahjkj.com/download.html</string>
    <string name="oemName">无忧支付</string>
    <string name="query_nothing">无记录</string>
    <string name="query_nothing_more">无更多记录</string>
    <string name="begin_to_experience">开始体验</string>
    <string name="licai_xieyi_1">&#60;&#60;快易付理财服务协议&#62;&#62;</string>
    <string name="credit_card_xieyi_1">&#60;&#60;信用卡贷款还款服务协议&#62;&#62;</string>
    <string name="polyloan_xieyi">&#60;&#60;保理贷产品服务协议&#62;&#62;</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="tv_loan_info">详情></string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="to_view_info">查看详情>></string>
    <string name="bank_star">****&#160;****&#160;****</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="kuaiyifu_xieyi">快易付客户端服务协议</string>
    <string name="kuaiyifu_v">快易付v</string>
    <string name="verfiy_code">v2.0</string>
    <string name="kefu_send">温馨提示：请留下您的宝贵的意见和遇到的问题，以及联系方式和地址！</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="login_outtime">登录超时，请重新登录!</string>
    <string name="gs_phone">4000898114</string>
    <string name="gs_phone_show">400-0898-114</string>
    <string name="js_phone">02361914934</string>
    <string name="js_phone_show">023-61914934</string>
    <string name="gs_email">cqahjkj@ahjkj.com</string>
    <string name="pay_sure">确认</string>
    <string name="pay_cancel">取消</string>
    <string name="youxianzeren">有限责任公司</string>
    <string name="xianxiajiaoyi">POS</string>
    <string name="yidongzhifu">手刷</string>
    <string name="weixinzhifu">微信</string>
    <string name="zhifubao">支付宝</string>
    <string name="baiduqianbao">百度钱包</string>
    <string name="suningyifubao">易付宝</string>
    <string name="fenrunType">分润类别</string>
    <string name="shuhui_to_qianbao">赎回至我的钱包</string>
    <string name="congzhi_to_bankCard">从我的银行卡</string>
    <string name="congzhi_to_qianbao">从我的钱包</string>
    <string name="shuhui_to_bankCard">赎回至我的银行卡</string>
    <string name="shuhui_to">赎回至</string>
    <string name="no_handPos">暂未绑定刷卡器</string>
    <string name="show_posloan_zige">“快易贷”是汇乐宝支付清算有限公司旗下一款专为小微型商户、会员量身定制的一款无抵押贷款产品；“快易贷”只为平台会员提供贷款资格！</string>
    <string name="show_posloan_tiaojian">会员用户在“快易付”平台分润收益连续三月月均核算，根据提供资料，平台审核资质！可做放大1-20倍贷款！</string>
    <string name="show_posloan_cailiao">户口本复印件，手持身份证照，房产证，单位水电气票据，住址水电气票据，银行卡照，营业执照，结婚证 （备注：资产资料越多越齐全贷款额度会相应提升）
“快易贷”只为平台会员量身打造！</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="getihu">个体户</string>
    <string name="qiye">企业非法人</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quit_app">再按一次,退出程序</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number">请输入登录手机号</string>
    <string name="phone_number_two">手机号</string>
    <string name="pwd">请输入登录密码</string>
    <string name="forget_pwd_tip">忘记密码？</string>
    <string name="select_bankbranch">选择支行地址</string>
    <string name="reset_pwd">重置密码</string>
    <string name="revise_pwd">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="cashin">收款</string>
    <string name="no_updating">目前已是最新版本</string>
    <string name="update_timeout">请求超时</string>
    <string name="card_query">银行卡查询</string>
    <string name="licai_shuoming">本产品可通过银行卡刷卡、钱包余额两种形式购买，起够金额10元。起息日为购入后第二天，产品购买后不能变现，封闭期内不可提前取出，到期后一次还本付息，资金于结算日自动返回钱包。如用户在产品封闭期内有资金需求，可申请“保理贷”产品。</string>
    <string name="poly_loan_guize">规则说明:\n本产品授信金额与快易付理财产品购入金额相同，欠款未还清钱理财产品将被冻结。</string>
    <string name="my_account">我的账户</string>
    <string name="licai_buy_tishi">本产品可通过银行卡刷卡、钱包余额两种形式购买，起购金额10元。起息日为购入后第二天，产品购买后不能变现，封闭期内不可提前取出，到期后一次还本付息，资金于结算日自动返回钱包。如用户在产品封闭期内有资金需求，可申请“保理贷”产品。</string>
    <string name="licai_info_tishi">温馨提示:\n该理财产品已被冻结,请还清"保理贷"的贷款,还清后,系统将自动解冻您的理财产品.</string>
    <string name="cashin_check_info">请核对刷卡消费信息</string>
    <string name="cashin_trade_reminder">* 消费成功后，会发送消费短信给用户，此短信免费</string>
    <string name="account_tip">* 每日提现按照以上商户信息清算</string>
    <string name="account_check_info">请核对商户信息</string>
    <string name="equ_check_info">请核对刷卡器信息</string>
    <string name="username_null">登录名不能为空</string>
    <string name="password_null">登录密码不能为空</string>
    <string name="app_version">快易付&#160;</string>
    <string name="app_company">深圳汇乐宝&#160;&#160;技术支持</string>
    <string name="app_company_info">Copyright 快易付All Rights Reserved</string>
    <string name="app_company1">Copyright快易付v </string>
    <string name="app_company2"> All Rights Reserved</string>
    <string name="enhanceEmail">临调交易需保留交易凭证并发送至888@qfpay.com，以供审核。</string>
    <string name="tipEnhanceSuccess">申请成功，我们会安排客服人员联系您</string>
    <string name="tipEnhanceFail">对不起，没有申请成功，请联系客服</string>
    <string name="quota_tip6">临调仅适用于信用卡单笔额度。</string>
    <string name="quota_tip7">申请提高的单笔额度最高为原额度的两倍。</string>
    <string name="quota_tip9">临调交易将会延迟3个工作日清算。</string>
    <string name="applyEnchance">申请提高限额</string>
    <string name="today_trade_count">今日:</string>
    <string name="account_settings">设置</string>
    <string name="account_help">帮助中心</string>
    <string name="user_pact">用户协议</string>
    <string name="about_qf">联系我们</string>
    <string name="loginout">退出登录</string>
    <string name="version">当前版本:</string>
    <string name="get_account_Quota_faild">获取账户限额信息失败</string>
    <string name="getTradeRecordFail">交易记录信息获取失败</string>
    <string name="get_account_info_faild">获取账户信息失败</string>
    <string name="account_loading">正在加载账户信息…</string>
    <string name="apply_enhance_loading">正在发送申请…</string>
    <string name="account_first_swipe">请先进行一笔交易,再查看账户信息</string>
    <string name="account_teach">新手引导</string>
    <string name="recommond_app">应用推荐</string>
    <string name="relation_info">参考信息</string>
    <string name="share_software">分享给朋友</string>
    <string name="share_title">分享个好东西给你</string>
    <string name="share_content">"我在用快易付POS机收借记卡和信用卡，挺方便也便宜，你看看www.ahjkj.com/download.html"</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="account_update_version">更新至最新版本</string>
    <string name="quota">临调限额</string>
    <string name="announce_center">通知中心</string>
    <string name="software_update">软件更新</string>
    <string name="software_update_tip">发现新版本，请点此升级</string>
    <string name="no_sdcard_can_not_set_photo">没有sdcard，无法设置头像</string>
    <string name="no_sdcard_can_not_set_shop_pic">没有sdcard，无法设置图片</string>
    <string name="no_sdcard_can_not_take_photo">没有sdcard，无法拍摄照片</string>
    <string name="create_photo_file_failed">无法拍摄照片</string>
    <string name="get_again">再次获取</string>
    <string name="resume">秒</string>
    <string name="set_photo_failed">设置头像失败</string>
    <string name="clientmanager">会员管理</string>
    <string name="clientmanager_file">会员档案</string>
    <string name="clientmanager_client_card_des1">纸笔记录有风险，云端存储更安全！</string>
    <string name="clientmanager_client_card_des2">全新的会员管理，全新的体验，更安全、更智能！</string>
    <string name="clientmanager_client_card_des3">会员档案</string>
    <string name="clientmanager_client_card_des4">顾客太多，难以维护？</string>
    <string name="clientmanager_client_card_des5">建立会员档案，每个会员尽在掌握！</string>
    <string name="clientmanager_client_card_des6">短信营销</string>
    <string name="clientmanager_client_card_des7">店里有新品？想做促销活动？想送节日祝福？</string>
    <string name="clientmanager_client_card_des8">把你想说的话，用短信传递给会员。</string>
    <string name="clientmanager_client_card_des9">充值记账</string>
    <string name="clientmanager_client_card_des10">会员充值，我来记账。每笔消费，短信通知，会员消费，明明白白！</string>
    <string name="clientmanager_client_card_des11">消费统计</string>
    <string name="clientmanager_client_card_des12">统计会员的累计消费金额，每笔消费都有记录。</string>
    <string name="clientmanager_client_card_des13">谁是尊贵会员？一目了然！</string>
    <string name="clientmanager_agress">我同意</string>
    <string name="clientmanager_qf_protocol">钱方会员管理协议</string>
    <string name="clientmanager_need_tick">请先同意\"钱方会员管理协议\"再使用</string>
    <string name="clientmanager_start_use">立即使用</string>
    <string name="client_number_des">已有%s位会员</string>
    <string name="client_trade_num_des">共消费%s笔</string>
    <string name="client_old_num_des">%s位成为回头客</string>
    <string name="client_recharge_num_des">%s位会员使用会员卡</string>
    <string name="client_list">会员列表</string>
    <string name="client_add">添加会员</string>
    <string name="client_add_first_client">请添加您的第一个会员吧</string>
    <string name="client_material_edit">资料修改</string>
    <string name="client_detail_trade_amount">消费金额：</string>
    <string name="client_detail_trade_count">消费次数：</string>
    <string name="client_detail_recharge_balance">会员卡余额：</string>
    <string name="client_detail_recharge_trade_count">会员卡消费次数：</string>
    <string name="client_detail_recharge">会员卡充值</string>
    <string name="client_detail_load_timout">网络出错，请重试</string>
    <string name="client_detail_card_balance_zero">会员卡余额为0，请先充值后再消费</string>
    <string name="client_edit">修改资料</string>
    <string name="client_input_phone_numer_search">输入手机号或者名字查找会员</string>
    <string name="client_search">搜索</string>
    <string name="client_no_record">没有会员记录</string>
    <string name="client_load_timeout">网络出错，请点此重试</string>
    <string name="client_get_failed">获取记录失败</string>
    <string name="client_input_mobile">输入必须大于1位</string>
    <string name="client_no_more_record">没有更多记录了！</string>
    <string name="client_get_list_failed">获取记录失败</string>
    <string name="client_mobile">会员手机号</string>
    <string name="client_name">会员姓名</string>
    <string name="client_female">女</string>
    <string name="client_detail_female">【女】</string>
    <string name="client_male">男</string>
    <string name="client_detail_male">【男】</string>
    <string name="client_detail_arrive_time">来本店%s次</string>
    <string name="client_detail_total_amount">累计消费%s元</string>
    <string name="client_no_trade_data">暂无记录</string>
    <string name="client_add_new_client">添加会员</string>
    <string name="client_add_success">添加成功</string>
    <string name="client_edit_success">修改成功</string>
    <string name="client_more_view">显示更多会员记录</string>
    <string name="client_save_edit">保存修改</string>
    <string name="client_swipe">刷卡收款</string>
    <string name="hintInputCode">请输入验证码</string>
    <string name="hintPhonenumber">请输入手机号,将作为登录账号</string>
    <string name="confirmationCode">验证码</string>
    <string name="inputnewPassWord">请输入6–12位数的新密码</string>
    <string name="inputoldPassWord">请输入旧密码</string>
    <string name="inputSecondTime">请再次输入密码</string>
    <string name="getConfirmationCode">获取验证码</string>
    <string name="cancel">取消</string>
    <string name="agree">同意</string>
    <string name="ok">确定</string>
    <string name="amount">金 额：</string>
    <string name="enter_user_pwd">登录密码</string>
    <string name="enter_user_pwd_again">确认登录密码</string>
    <string name="cashback_amount">提款</string>
</resources>