<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regBackGround"
    android:orientation="vertical" >

    <com.lk.qf.pay.wedget.CommonTitleBar
        android:id="@+id/titlebar_mobile_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleview_height" >
    </com.lk.qf.pay.wedget.CommonTitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_background_reg"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                style="@style/mStyle.reg_content"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/phone_number_two" />

            <EditText
                android:id="@+id/et_mobile_verify_phone"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/reg_input_height"
                android:layout_marginTop="3dp"
                android:background="@drawable/selector_input_reg"
                android:gravity="left|center"
                android:hint="@string/hintPhonenumber"
                android:inputType="phone"
                android:maxLength="11"
                android:textColorHint="@color/grayline" />

            <TextView
                style="@style/mStyle.reg_content"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/confirmationCode" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_mobile_verify_phoneverify"
                        android:layout_width="0.0dip"
                        android:layout_height="@dimen/reg_input_height"
                        android:layout_weight="1.0"
                        android:background="@drawable/selector_input_reg"
                        android:hint="@string/hintInputCode"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textColorHint="@color/grayline" />

                    <Button
                        android:id="@+id/btn_mobile_verify_getverify"
                        android:layout_width="130.0dip"
                        android:layout_height="@dimen/reg_btn_next_height"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/selector_next_normal"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/getConfirmationCode"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <CheckBox
                android:id="@+id/cb_my_bank_card_add_agree"
                style="@style/MyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/agree"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_mobile_verify_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="服务协议"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <Button
                android:id="@+id/btn_mobile_verify_next_step"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_btn_next_height"
                android:layout_weight="1"
                android:background="@drawable/selector_next_normal"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>