<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.lk.bhb.pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regBackGround"
    android:orientation="vertical" >

    <com.lk.qf.pay.wedget.CommonTitleBar
        android:id="@+id/titlebar_revisepwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleview_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/biankuang_dailixinxi_1"
                android:orientation="vertical" >

                <com.lk.qf.pay.wedget.view.MyXEdittextView
                    android:id="@+id/et_change_verify_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:background="@null"
                    android:gravity="left|center"
                    android:layout_marginRight="10dp"
                    android:hint="请输入手机号"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/grayline" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/old_pwd_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:background="@drawable/biankuang_dailixinxi_1"
                    android:gravity="left|center"
                    android:hint="@string/inputoldPassWord"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grayline" />

                <EditText
                    android:id="@+id/new_pwd_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/biankuang_dailixinxi_1"
                    android:gravity="left|center"
                    android:hint="@string/inputnewPassWord"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/grayline" />

                <EditText
                    android:id="@+id/new_pwda_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/biankuang_dailixinxi_1"
                    android:hint="@string/inputSecondTime"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/grayline" />
            </LinearLayout>

            <Button
                android:id="@+id/revise_pwd_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/reg_btn_next_height"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/selector_next_normal"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/large" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>