<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regBackGround"
    android:orientation="vertical" >

    <com.lk.qf.pay.wedget.CommonTitleBar
        android:id="@+id/titlebar_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleview_height"
        android:orientation="vertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/biankuang_dailixinxi_1"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" >

                <com.lk.qf.pay.wedget.view.MyXEdittextView
                    android:id="@+id/et_regist_verify_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:layout_marginTop="3dp"
                    android:background="@null"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:hint="@string/hintPhonenumber"
                    android:inputType="phone"
                    android:textColorHint="@color/lightgray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <com.lk.qf.pay.wedget.EditTextWithClear
                    android:id="@+id/et_register_user_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/biankuang_dailixinxi_1"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_user_pwd"
                    android:maxLines="12"
                    android:paddingLeft="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColorHint="@color/lightgray" />

                <com.lk.qf.pay.wedget.EditTextWithClear
                    android:id="@+id/et_register_user_pwd_again"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/biankuang_dailixinxi_1"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_user_pwd_again"
                    android:imeActionLabel="@string/register"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/lightgray" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_regist_merJianCheng"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_input_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/biankuang_dailixinxi_1"
                android:hint="请输入商户姓名"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/biankuang_dailixinxi_1"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" >

                <com.lk.qf.pay.wedget.view.MyXEdittextView
                    android:id="@+id/et_regist_yaoqingma"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/reg_input_height"
                    android:layout_marginTop="3dp"
                    android:background="@null"
                    android:gravity="left|center"
                    android:hint="请输入邀请码"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:textColorHint="@color/lightgray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/biankuang_dailixinxi_1"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_regist_verify_phoneverify"
                        android:layout_width="0.0dip"
                        android:layout_height="@dimen/reg_input_height"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:hint="@string/hintInputCode"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/lightgray" />

                    <Button
                        android:id="@+id/btn_regist_verify_getverify"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/selector_next_normal"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/getConfirmationCode"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <CheckBox
                    android:id="@+id/cb_regist_card_add_agree"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true" />

                <TextView
                    android:id="@+id/tv_regist_verify_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/cb_regist_card_add_agree"
                    android:text="服务协议"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_register_confirm"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/reg_btn_next_height"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_next_normal"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/large" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>